--- a/intro-ml.tex
+++ b/intro-ml.tex
@@ -113,7 +113,7 @@ Duke University \\ % Your institution for the title page
 \begin{frame}
 \Huge{\centerline{Thanks!}}
 
-\Large{\centerline{Resources and references: \href{http://yixinlin.net/intro-ml}{yixinlin.net/intro-rl}}}
+\Large{\centerline{Resources and references: \href{http://yixinlin.net/intro-ml}{yixinlin.net/intro-ml}}}
 
 \end{frame}
 
