--- a/intro-ml.tex
+++ b/intro-ml.tex
@@ -77,14 +77,15 @@
 }
 
 \usepackage{graphicx} % Allows including images
-\graphicspath{img}
+\graphicspath{}
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
+\usepackage{amsmath}
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[Intro to ML]{Introduction to machine learning} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[Intro to ML]{Introduction to Deep Learning} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Yixin Lin, Serge Assaad, Rohith Kuditipudi} % Your name
 \institute[Duke] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
@@ -104,10 +105,61 @@ Duke University \\ % Your institution for the title page
 \begin{frame}
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
+\section{Review of basic principles of machine learning}
+\section{Introduction to neural networks}
+\section{Tutorial on implementing deep learning algorithms}
 \end{frame}
 
-\begin{frame}
-\frametitle{Introduction} % Table of contents slide, comment this block out to remove it
+
+\begin{frame}{Review of basic principles of machine learning}
+\begin{itemize}
+    \item Three components to any ML problem: the \textbf{task}, the \textbf{performance measure} and the \textbf{data}
+    \item Essential definitions
+    \begin{itemize}
+        \item \textbf{Features}
+        \item \textbf{Model}
+        \item \textbf{Parameters}
+        
+    \end{itemize}
+    
+\end{itemize}
+    
+\end{frame}
+
+\begin{frame}{Example: Linear Regression}
+\begin{itemize}
+    \item Can we \textbf{predict} y given x, using the model $\hat{\textbf{y}}=m\textbf{x}+\textbf{b}$?
+    \includegraphics[scale=0.2]{LinReg.png}
+
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Introduction to Neural Networks}
+\begin{itemize}
+    \item Neurons are the building blocks of neural networks
+    \item Each neuron is a \textbf{function}: $y=f(\textbf{w}^{T}\textbf{x}+\textbf{b})$
+    \includegraphics[scale=0.4]{Neuron.png}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Neural Networks are Layers of Neurons}
+    \includegraphics[scale=0.6]{neural-network.png}
+\end{frame}
+
+\begin{frame}{What are Neural Networks Good For?}
+    \includegraphics[scale=0.7]{cifar_preview.png}
+\end{frame}
+
+\begin{frame}{Training Neural Networks: Gradient Descent}
+\includegraphics[scale=0.4]{gradient.png}
+\end{frame}
+
+\begin{frame}{Tutorial}
+\begin{itemize}
+    \item Time to \textbf{build something}!
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}
