Add a few notes

--- a/intro-ml.tex
+++ b/intro-ml.tex
@@ -165,6 +165,12 @@ Duke University \\ % Your institution for the title page
 \begin{frame}{Tutorial}
 \begin{itemize}
     \item Time to \textbf{build something}!
+    \item Goals:
+      \begin{itemize}
+        \item Give you a basic framework for thinking about what machine learning is and isn't
+        \item Have a project done or almost done at the end of the workshop
+        \item Get you set up to continue to tinker and play with machine learning models
+      \end{itemize}
 \end{itemize}
 
 \end{frame}
