Update finetuning to have a softmax output

--- a/3_finetune.ipynb
+++ b/3_finetune.ipynb
@@ -68,7 +68,7 @@
     "num_categories = 2\n",
     "\n",
     "for layer in vgg.layers: layer.trainable=False\n",
-    "new_output = Dense(num_categories, activation='relu')(vgg.output)\n",
+    "new_output = Dense(num_categories, activation='softmax')(vgg.output)\n",
     "model = Model(inputs=vgg.input, outputs=new_output)\n",
     "model.compile(optimizer='adam',\n",
     "                loss='categorical_crossentropy', metrics=['accuracy'])"
